--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,6 +16,10 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
+    buildFreatures {
+        viewBinding = true
+    }
+
     buildTypes {
         release {
             minifyEnabled false
